test/FileCheck/dump-input/Input/check-never-input.input
CHECK: error: CHECK-NOT: string occurred!
CHECK-NOT:Input file:
CHECK-NOT:Check file:

Make sure no input dump.
